<resources>
    <string name="app_name">MY Workout Tracker</string>
    <string name="profile_name">MY Profile</string>
    <string name="register_name">Register Account</string>
    <string name="about_name">About MWT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short\nAt least 8 characters</string>
    <string name="error_same_password">This new password is same as current password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="time"><u>00:10</u></string>
    <string name="date"><u>Date</u></string>
    <string name="measure"><u>Measure (CM)</u></string>
    <string name="weight"><u>Weight (KG)</u></string>
    <string name="status">BMI = weight(kg) / height(m)<sup><small>2</small></sup></string>
    <string name="interneterror">No internet connection detected! Please turn on your Mobile Data/WiFi first!</string>
    <string name="register">Don\'t Have Account? <u>Register Here</u></string>
    <string name="aboutu">DEVELOPER</string>

    <string name="about_text">MY Workout Tracker is a mobile application that record user daily workout. This apps can track their workout, cardio, weight and body size too. It will help user to follow their progression and the evolution of their body based on the all workout record. \n\nUser also can create as many machines as they want with the name they wanted too. No useless exercises are pre-created because user create their own exercise depending on the name of the machine user have in their workout place.\n</string>
</resources>
